--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap-select.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src='js/bootstrap.bundle.min.js'></script>
-	<script type="text/javascript" src='js/bootstrap-select.min.js'></script>
+	<script src="JS/jquery-3.3.1.min.js"></script>
+	<script type="text/javascript" src='JS/bootstrap.bundle.min.js'></script>
+	<script type="text/javascript" src='JS/bootstrap-select.min.js'></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
 </head>
@@ -75,20 +75,20 @@
 				<!-- The slideshow -->
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="images/carousel/Celebrate.jpg" alt="Celebration at Brooklyn Bridge"
+						<img src="Images/carousel/Celebrate.jpg" alt="Celebration at Brooklyn Bridge"
 							class="w-100 d-block">
 						<div class="carousel-caption">
 							<h4>Organized by Brooklyn Vibes Event Co.</h4>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="images/carousel/brooklynBridge3.jpg" alt="Something Gotta Give" class="w-100 d-block">
+						<img src="Images/carousel/brooklynBridge3.jpg" alt="Something Gotta Give" class="w-100 d-block">
 						<div class="carousel-caption">
 							<h4>The best Movies oudoors</h4>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="images/carousel/BrooklynFilm.jpg" alt="New York" class="w-100 d-block">
+						<img src="Images/carousel/BrooklynFilm.jpg" alt="New York" class="w-100 d-block">
 						<div class="carousel-caption">
 							<h4>For all the family</h4>
 						</div>
@@ -159,7 +159,7 @@
 			<div id="August5" class="container tab-pane active"><br>
 				<div class="card-deck">
 					<div class="card shadow">
-						<img class="card-img-top" src="images/Movies/LoveActually.jpg" alt="Love Actually">
+						<img class="card-img-top" src="Images/Movies/LoveActually.jpg" alt="Love Actually">
 						<div class="card-body center">
 
 							<!-- Button to Open the Modal -->
@@ -220,7 +220,7 @@
 						</div>
 					</div>
 					<div class="card shadow">
-						<img class="card-img-top" src="images/Movies/SomethingGottaGive.jpg"
+						<img class="card-img-top" src="Images/Movies/SomethingGottaGive.jpg"
 							alt="Something's Gotta Give">
 						<div class="card-body center">
 							<!-- Button to Open the Modal -->
@@ -297,7 +297,7 @@
 			<div id="August6" class="container tab-pane fade"><br>
 				<div class="card-deck">
 					<div class="card shadow">
-						<img class="card-img-top" src="images/Movies/Transformers.jpg" alt="Transformers">
+						<img class="card-img-top" src="Images/Movies/Transformers.jpg" alt="Transformers">
 						<div class="card-body center">
 
 							<!-- Button to Open the Modal -->
@@ -360,7 +360,7 @@
 						</div>
 					</div>
 					<div class="card shadow">
-						<img class="card-img-top" src="images/Movies/taken.jpg" alt="Taken">
+						<img class="card-img-top" src="Images/Movies/taken.jpg" alt="Taken">
 						<div class="card-body center">
 							<!-- Button to Open the Modal -->
 							<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Take">
@@ -422,7 +422,7 @@
 			<div id="August7" class="container tab-pane fade"><br>
 				<div class="card-deck">
 					<div class="card shadow">
-						<img class="card-img-top" src="images/Movies/Moana.jpg" alt="Moana">
+						<img class="card-img-top" src="Images/Movies/Moana.jpg" alt="Moana">
 						<div class="card-body center">
 							<!-- Button to Open the Modal -->
 							<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Moa">
@@ -476,7 +476,7 @@
 						</div>
 					</div>
 					<div class="card shadow">
-						<img class="card-img-top" src="images/Movies/TheChangeUp.jpg" alt="The change Up">
+						<img class="card-img-top" src="Images/Movies/TheChangeUp.jpg" alt="The change Up">
 						<div class="card-body center">
 							<!-- Button to Open the Modal -->
 							<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ChangeUp">
@@ -547,7 +547,7 @@
 			<div id="August8" class="container tab-pane fade"><br>
 				<div class="card-deck">
 					<div class="card shadow">
-						<img class="card-img-top" src="images/Movies/MammaMia.jpg" alt="Mamma Mia!">
+						<img class="card-img-top" src="Images/Movies/MammaMia.jpg" alt="Mamma Mia!">
 						<div class="card-body center">
 							<!-- Button to Open the Modal -->
 							<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Mamma">
@@ -602,7 +602,7 @@
 						</div>
 					</div>
 					<div class="card shadow">
-						<img class="card-img-top" src="images/Movies/Passengers.jpg" alt="Passengers">
+						<img class="card-img-top" src="Images/Movies/Passengers.jpg" alt="Passengers">
 						<div class="card-body center">
 							<!-- Button to Open the Modal -->
 							<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Passen">
