--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@
 				<!-- The slideshow -->
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="Images/carousel/Celebrate.jpg" alt="Celebration at Brooklyn Bridge"
+						<img src="Images/Carousel/Celebrate.jpg" alt="Celebration at Brooklyn Bridge"
 							class="w-100 d-block">
 						<div class="carousel-caption">
 							<h4>Organized by Brooklyn Vibes Event Co.</h4>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="Images/carousel/brooklynBridge3.jpg" alt="Something Gotta Give" class="w-100 d-block">
+						<img src="Images/Carousel/BrooklynBridge3.jpg" alt="Something Gotta Give" class="w-100 d-block">
 						<div class="carousel-caption">
 							<h4>The best Movies oudoors</h4>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img src="Images/carousel/BrooklynFilm.jpg" alt="New York" class="w-100 d-block">
+						<img src="Images/Carousel/BrooklynFilm.jpg" alt="New York" class="w-100 d-block">
 						<div class="carousel-caption">
 							<h4>For all the family</h4>
 						</div>
@@ -360,7 +360,7 @@
 						</div>
 					</div>
 					<div class="card shadow">
-						<img class="card-img-top" src="Images/Movies/taken.jpg" alt="Taken">
+						<img class="card-img-top" src="Images/Movies/Taken.jpg" alt="Taken">
 						<div class="card-body center">
 							<!-- Button to Open the Modal -->
 							<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#Take">
